# ric-compiler

./: .gitignore  CMakeLists.txt  LICENSE  README.md  a.asm  a.out
compiler/: CMakeLists.txt
compiler/include/ast/: ast.hpp  types.hpp  visitor.hpp
compiler/include/codegen/: codegen.hpp
compiler/include/diagnostics/: diagnostics.hpp  source_location.hpp
compiler/include/driver/: driver.hpp
compiler/include/ir/: ir.hpp  ir_builder.hpp
compiler/include/lexer/: lexer.hpp  token.hpp
compiler/include/optimizer/: passes.hpp
compiler/include/parser/: parser.hpp
compiler/include/semantic/: semantic_analyzer.hpp  symbol_table.hpp
compiler/src/: main.cpp
compiler/src/codegen/: codegen.cpp
compiler/src/diagnostics/: diagnostics.cpp
compiler/src/driver/: driver.cpp
compiler/src/ir/: ir_builder.cpp
compiler/src/lexer/: lexer.cpp
compiler/src/optimizer/: passes.cpp
compiler/src/parser/: parser.cpp
compiler/src/semantic/: semantic_analyzer.cpp
docs/: Architecture.md  IRDesign.md
examples/: collatz.ric  factorial.ric  fibonacci.ric
tests/: CMakeLists.txt  test_lexer.cpp  test_optimizer.cpp  test_parser.cpp  test_semantic.cpp
